# sheaf-ai

./: .env.example  .gitignore  .mcp.json  AGENTS.md  BACKLOG.md  BP-Lite.md  BP.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  PLAN.md  PRIVACY.md  README.md  README_CN.md  SECURITY.md  conftest.py  pyproject.toml  requirements.txt  sheaf_ai_collectors_router.py  sheaf_ai_setup.py  tests_test_init_auto.py  tests_test_setup.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  nightly-review.yml  publish.yml
.workbuddy/agents/: nightly-dev.md
.workbuddy/automations/automation-1779335418811/: memory.md
.workbuddy/memory/: 2026-05-22.md  2026-05-23.md  MEMORY.md
docs/: AGENT-NATIVE-DESIGN-PRINCIPLES.md  KNOWLEDGE-MARKETPLACE-VISION.md  MATRIX-PRODUCT-DESIGN.md  OBSIDIAN-INTEGRATION-RESEARCH.md  ONE-CLICK-INSTALL-RESEARCH.md  PRODUCT-DESIGN-INDEX.md  README.md  RELEASE-CHECKLIST.md  RELEASE-LIFECYCLE.md  SOURCE-INTELLIGENCE-DESIGN.md  TECH-AUDIT.md  agent-query-spec.md  content-collection-research.md  ecosystem-vision.md  manual-test-checklist-2026-06-15.md  mcp-setup.md  opc-operations-harness.md  personas-and-scenarios.md  product-audit.md  product-overview.md  product-test-profiles-2026-06-02.md  schema-v1.md  self-review.md  smoke-test-automated-2026-06-01.md
docs/archive/: DUAL-USE-SYNERGY-PLAN.md  ecosystem-vision.md  glean-narrative.md  positioning-v1.md
extension/: background.js  manifest.json  options.html  popup.html  popup.js
internal/: BACKLOG.md  BP-CHANGES.md  BP.md
needs/: pm-analysis.md  user-needs.md
prompts/: classify.md  crystallize.md  summarize.md
proposals/: mvp-readiness-checklist.md
research/: agent-trend-alignment.md  business-model-v1.md  checkpoint-strategy-research.md  competitor-deep-dive.md  strategy-brief-v1.md  whitespace-analysis.md
scripts/: feedback.py  fetch_article.py  llm_client.py  mcp_server.py  onboarding.py  pipeline.py  smoke-pre-release.py
sheaf_ai/: __init__.py  api.py  batch.py  card_extraction.py  card_service.py  cli.py  config.py  crystallize.py  display.py  embedding_bridge.py  entities.py  exceptions.py  feedback.py  fetch_article.py  filters.py  gamification.py  insights.py  llm_client.py  matrix.py  mcp_server.py  onboarding.py  pipeline.py  providers.py  quality.py  query.py  renderer.py  search.py  settings.py  setup.py  source_registry.py  source_scoring.py  storage.py  synonyms.py  term.py  utils.py
sheaf_ai/collectors/: __init__.py  arxiv.py  github.py  paper_handler.py  pdf.py  router.py  semantic_scholar.py  spa_fetcher.py
sheaf_ai/mcp/: __init__.py  cards.py  collect.py  data.py  entries.py  insights.py  protocol.py  resources.py  search.py  server.py  verify.py
sheaf_ai/skills/: AGENTS.sheaf.md  sheaf-guide.md
sheaf_cards/: __init__.py  base.py  embeddings.py  generator.py
tests/: __init__.py  conftest.py  llm_depth_test.py  test_api.py  test_arxiv.py  test_batch.py  test_card_extraction.py  test_card_service.py  test_cli_agent_native.py  test_cli_v062.py  test_collectors.py  test_crosscheck.py  test_crystallize.py  test_embedding_bridge.py  test_entities.py  test_error_regression.py  test_filters.py  test_gamification.py  test_hybrid_search.py  test_init_auto.py  test_install.py  test_matrix.py  test_mcp.py  test_mcp_e2e.py  test_paper_handler.py  test_pdf_collector.py  test_quality.py  test_renderer.py  test_search.py  test_search_synonyms.py  test_setup.py  test_skill_contract.py  test_source_scoring.py  test_spa_fetcher.py  test_storage.py  test_synonyms_config.py  test_tag_tracking.py  test_unit.py  test_uuid_mapper.py
uc/: __init__.py  cli.py  config.py  embedding_bridge.py  feedback.py  fetch_article.py  gamification.py  insights.py  llm_client.py  mcp_server.py  onboarding.py  pipeline.py  query.py  search.py  storage.py  utils.py
