[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sheaf-ai"
version = "0.1.0"
description = "Sheaf — Your personal knowledge layer. Paste a link, AI does the rest."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "zhelunSun"},
]
keywords = ["knowledge-management", "ai", "mcp", "cli", "agent"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Knowledge Management",
]

dependencies = [
    "openai>=2.32.0",
    "requests>=2.32.0",
    "beautifulsoup4>=4.12.0",
    "playwright>=1.59.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
]

[project.scripts]
sheaf = "uc.cli:main"

[project.entry-points."mcp.servers"]
sheaf = "uc.mcp_server:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["uc*"]

[tool.ruff]
line-length = 100
target-version = "py310"
