[build-system]
requires = ["setuptools>=68.0,<77.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sheaf-ai"
version = "0.4.0a1"
description = "Sheaf — Your personal knowledge layer. Paste a link, AI does the rest."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
authors = [
    {name = "zhelunSun"},
]
keywords = ["knowledge-management", "ai", "mcp", "cli", "agent"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Internet :: WWW/HTTP :: Indexing/Search",
    "Framework :: Pytest",
]

dependencies = [
    "openai>=2.32.0",
    "requests>=2.32.0",
    "beautifulsoup4>=4.12.0",
    "numpy>=1.24.0",
]

[project.urls]
Homepage = "https://github.com/zhelunSun/sheaf-ai"
Repository = "https://github.com/zhelunSun/sheaf-ai"
Issues = "https://github.com/zhelunSun/sheaf-ai/issues"

[project.optional-dependencies]
browser = [
    "playwright>=1.59.0",
]
cards = [
    "numpy>=1.24.0",
]
server = [
    "fastapi>=0.100.0",
    "uvicorn>=0.20.0",
    "httpx>=0.24.0",
]
all = [
    "playwright>=1.59.0",
    "numpy>=1.24.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.20.0",
    "httpx>=0.24.0",
]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
    "build>=1.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.20.0",
    "httpx>=0.24.0",
]

[project.scripts]
sheaf = "sheaf_ai.cli:main"
sheaf-mcp = "sheaf_ai.mcp_server:main"

[project.entry-points."mcp.servers"]
sheaf = "sheaf_ai.mcp_server:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["sheaf_ai*", "sheaf_cards*", "prompts*"]

[tool.setuptools.package-data]
prompts = ["*.md"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint.per-file-ignores]
"sheaf_ai/cli.py" = ["E701", "E702"]
"sheaf_ai/config.py" = ["E402"]
